<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/invite"
        android:title="@string/invite_friends"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/copy_invite_code"
        android:title="@string/copy_invite_code"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/copy_play_link"
        android:title="@string/copy_play_link"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/redeem"
        android:title="@string/redeem_invite"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/daily_line_reminders"
        android:title="@string/daily_line_reminders_off"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/remove_ads"
        android:title="@string/remove_ads"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_round_info"
        android:title="@string/info"
        android:visible="true"
        app:showAsAction="always" />

</menu>