<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_random"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_quotes"
        android:icon="@drawable/ic_explore"
        android:title="@string/nav_explore" />

    <item
        android:id="@+id/navigation_anime"
        android:icon="@drawable/ic_anime"
        android:title="@string/nav_anime" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/nav_favorites" />

    <item
        android:id="@+id/navigation_packs"
        android:icon="@drawable/ic_packs"
        android:title="@string/nav_packs" />

</menu>
