<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        android:padding="@dimen/spacing_xs"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_sm"
        android:text="@string/info_1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_sm"
        android:text="@string/info_2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_sm"
        android:text="@string/info_3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_sm"
        android:text="@string/content_tip"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/cita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/touch_target_min"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/github_cita"
        android:drawablePadding="@dimen/spacing_md"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/spacing_sm"
        android:paddingEnd="@dimen/spacing_sm"
        android:paddingTop="@dimen/spacing_sm"
        android:paddingBottom="@dimen/spacing_sm"
        android:text="@string/app_name"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_github" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/showAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/touch_target_min"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_md"
        android:contentDescription="@string/cd_show_support_ad"
        app:icon="@drawable/ic_cita_small" />

</androidx.appcompat.widget.LinearLayoutCompat>
