<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_sm"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:text="@string/text_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getReward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/touch_target_min"
        android:layout_marginTop="@dimen/spacing_md"
        android:text="@string/reward_quotes_without_ads"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/showAd"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/touch_target_min"
        android:layout_marginTop="@dimen/spacing_sm"
        android:text="@string/watch_short_ad"
        android:textAllCaps="false"
        android:contentDescription="@string/cd_show_support_ad"
        app:icon="@drawable/ic_cita_small" />

</LinearLayout>
