<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/spacing_lg">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="@dimen/touch_target_min"
        android:layout_height="@dimen/touch_target_min"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:clickable="false"
        android:focusable="false"
        android:importantForAccessibility="no"
        android:contentDescription="@string/cd_error_icon"
        app:icon="@drawable/ic_error_outline"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="24dp"
        android:layout_margin="@dimen/spacing_sm"
        app:iconTint="@color/design_default_color_error"
        app:shapeAppearanceOverlay="@style/OverlayButtonCircle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_occurred"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_error"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/touch_target_min"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/reload_page"
        android:layout_margin="@dimen/spacing_sm"
        android:textAllCaps="false"
        android:id="@+id/reload_page"
        app:icon="@drawable/ic_restore_page"/>

</LinearLayout>
